P2/files/00-app1.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: paulbouwer/hello-kubernetes:1.10
        resources:
          limits:
            memory: 128Mi
            cpu: 100m
        ports:
        - name: web
          containerPort: 80
