P2/files/00-app3.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
spec:
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: app3
        image: paulbouwer/hello-kubernetes:1.10
        resources:
          limits:
            memory: 128Mi
            cpu: 100m
        ports:
        - name: web
          containerPort: 80
